kube-with-ingress-tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-with-tls
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - http:
      paths:
      - path: /weatherforecast
        pathType: Prefix
        backend:
          service:
            name: kube-with-tls
            port: 
              number: 80
    host: practicekube.eastus.cloudapp.azure.com
  tls:
    - hosts:
      - practicekube.eastus.cloudapp.azure.com
      secretName: frontend-tls
